--- a/Lab2Exercise1.ipynb
+++ b/Lab2Exercise1.ipynb
@@ -104,7 +104,7 @@
     "p = 128\n",
     "\n",
     "y = 0  # C * x\n",
-    "# C is a matrix of 128 rows\n",
+    "# C is a matrix of 128 rows of booleans (randomly selected) --> Measurement matrix \n",
     "\n"
    ]
   },
@@ -124,9 +124,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "## matrix\n",
-    "Psi =  # Build Psi (using dct())\n",
-    "Theta =    # C * Psi\n",
+    "# The DCT is one specific basis function (set of cosines at different frequencies)\n",
+    "# Psi matrix is the \"library\", i.e. the set of regressors of the problem\n",
+    "# Note: it must contain the relevant functions to represent the dataset, \n",
+    "# That is: the relevant modes of the system generating the dataset.\n",
+    "Psi =  0 # Build Psi (using dct())\n",
+    "Theta =  0  # C * Psi\n",
     "\n"
    ]
   },
@@ -161,6 +164,7 @@
     "print(\"optimal value\", prob.value)\n",
     "print(\"optimal var\", s_c.value)\n",
     "\n",
+    "# Solve for the estimated (reconstructed) signal. Good practice: apply threshold on numerical zeros.\n",
     "urecon = idct(s_c.value)\n",
     "\n"
    ]
@@ -223,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
