Solution attempt lab7

--- a/Lab5Exercise1_InvProblem.ipynb
+++ b/Lab5Exercise1_InvProblem.ipynb
@@ -56,7 +56,10 @@
         "import matplotlib.pyplot as plt\n",
         "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
         "#!pip -q install pyDOE\n",
-        "from pyDOE import lhs  # for latin hypercube sampling\n"
+        "from pyDOE import lhs  # for latin hypercube sampling\n",
+        "\n",
+        "np.random.seed(10) \n",
+        "# TODO: Check if seed setting is correctly working: in principle the output of the sampling should be the same at each trial\n"
       ]
     },
     {
@@ -198,8 +201,6 @@
       "outputs": [],
       "source": [
         "# Collocation points for PDE \"enforcing\"\n",
-        "np.random.seed(seed=1) \n",
-        "# TODO: Check if seed setting is correctly working: in principle the output of the sampling should be the same at each trial\n",
         "\n",
         "Ncl = 2000\n",
         "X = lhs(2,Ncl) # Latin Hypercube sampling of dimension N=2 and Ncl samples\n",
