Added NN basic example

--- a/Lab1Exercise1.ipynb
+++ b/Lab1Exercise1.ipynb
@@ -142,6 +142,8 @@
     "# Apply PCA to data matrix and obtain a reduced-order approximation with Ncomp components\n",
     "signalsPCA = PCA(Ncomp) # Instantiate PCA object\n",
     "signalsPCA.fit(   (signals-np.mean(signals, 0)).T ) # Fit PCA object to data matrix\n",
+    "\n",
+    "# Test PCA using svd instead of PCA sklearn class\n",
     "\n"
    ]
   },
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
